# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

members = [
    "chapter_three_exs",
    "control_flow",
    "functions",
    "guessing_game",
    "hello_cargo",
    "hello_world",
    "ownership",
    "structs",
    "variables",
    "enums",
    "restaurant",
    "data_structures",
    "chapter_eight_exs"
]

